@@ -23,7 +23,7 @@ setup(name='Sonata',
         py_modules = ['sonata'],
         scripts = ['sonata', 'mpdclient3.py'],
         data_files=[('share/sonata',
-                        ['README', 'CHANGELOG', 'TODO']),
+                        ['README', 'CHANGELOG', 'TODO', 'TRANSLATORS']),
                     ('share/applications',
                         ['sonata.desktop']),
                     ('share/pixmaps',
